--- a/css/main2.css
+++ b/css/main2.css
@@ -94,6 +94,7 @@ footer {
   align-content: center;
   font-family: "Poppins", sans-serif;
   justify-content: center;
+  text-align: center;
   font-size: 5em;
 }
 
@@ -134,7 +135,7 @@ img {
   justify-content: space-around;
 }
 
-  @media only screen and (max-width:1024px){
+  /* @media only screen and (max-width:1024px){
       body{
           grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
           grid-template-rows: auto auto 10%;
@@ -160,6 +161,6 @@ img {
       li{
           padding-left:0em;
       }
-  }
+  } */
   
   
